# python-sandbox

./: .gitattributes  README.md
.zed/: tasks.json
3party/click/class-param/: Makefile  README.md  pyproject.toml
3party/click/class-param/src/class_param/: __init__.py  clicklib.py
3party/click/class-param/test/: test_param.py
3party/click/click-types/: Makefile  main.py  pyproject.toml
3party/click/common-options/: .enter.sh  Makefile  main.py  pyproject.toml
3party/click/common-options/src/common_options/: __init__.py
3party/click/config-choice/: Makefile  pyproject.toml
3party/click/config-choice/src/config_choice/: __init__.py
3party/click/dataclass-param/: Makefile  pyproject.toml  sandbox.ipynb
3party/click/dataclass-param/src/dataclass_param/: __init__.py
3party/click/dynamic-subcommands/: Makefile  pyproject.toml
3party/click/dynamic-subcommands/src/dynamic_subcommands/: __init__.py  banner.py
3party/click/dynamic-subcommands/src/plugins/: _common_parameters.py  get.py  get_status.py  nested.py
3party/click/enum-alias/: Makefile  pyproject.toml
3party/click/enum-choices/: Makefile  main.py  pyproject.toml
3party/click/introspection/: Makefile  generate_command.py  introspect.py  introspection.ipynb  main.py  pyproject.toml  r
3party/click/json-type/: Makefile  README.md  clicklib.py  data.py  main.py  pyproject.toml  testbed3.yml  testbeds.yaml
3party/click/json-type/test/: conftest.py  sample.py  test_param_type.py
3party/curses-menu-tryout/: Makefile  pyproject.toml
3party/curses-menu-tryout/src/curses_menu_tryout/: __init__.py  cli.py
3party/jsonpath/: Makefile  README.md  list_titles.py  list_titles_pjp.py  main.py  pyproject.toml  python_jsonpath_sandbox.py  requirements.txt
3party/jsonpath/archived/: jsonpath2_list_books.py
3party/jsonpath/data/: bookstore.json
3party/jsonpath/python-jsonpath/: Makefile  findall.py  findall_from_file.py  products.json
3party/mypy/: Makefile  pyproject.toml  quack.py
3party/pydantic/: Makefile  nested_model.py  pyproject.toml  requirements.txt
3party/pydantic/src/pydantic_sandbox/: banner.py  ex1.py  ex2_model_json_schema.py
3party/pydantic/test/: test_simple.py  test_validation.py
gramlib/: Makefile  pyproject.toml
gramlib/src/gramlib/: __init__.py
gramlib/test/: test_format_count.py
tools/dtree/: Makefile  pyproject.toml
tools/dtree/src/dtree/: main.py  settings.py
tools/dtree/test/: test_settings.py
topics/am_lich/: Makefile  pyproject.toml
topics/am_lich/src/amlich/: __init__.py  main.py  tablelib.py
topics/args-builder/: Makefile  pyproject.toml
topics/args-builder/src/args_builder/: handler.py
topics/args-builder/test/: test_to_args.py
topics/async-vs-threading/: Makefile  asyncio_timing.py  common.py  join_timedout.py  pyproject.toml  sync_timing.py  threading_timing.py
topics/battleship/: Makefile  pyproject.toml  sandbox.py
topics/battleship/src/battleship_game/: __init__.py  const.py  game.py  game_board.py  player.py  ship_board.py  target_board.py
topics/hvtext/: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  sourceme.sh
topics/hvtext/doc/: discard.md  fixed-width.md  kv.md  serial.md
topics/hvtext/hvtext/: __init__.py  discard.py  fixed_width.py  kv.py
topics/hvtext/samples/: __init__.py  csv_with_comments.csv  csv_with_comments.py  guess_does_not_work.py  json_with_comments.json  kv_demo.py  kv_with_colon.txt  parse_fixed_width_files.py  parse_json_with_comments.py  table.txt
topics/hvtext/src/hvtext/: __init__.py  discard.py  fixed_width.py  kv.py  serial.py
topics/hvtext/src/samples/: __init__.py  csv_with_comments.py  guess_does_not_work.py  kv_demo.py  kv_with_equal.txt  parse_fixed_width_files.py  parse_json_with_comments.py
topics/hvtext/src/test/: discard_blank_test.py  discard_comment_test.py  guess_columns_for_one_row_test.py  kv_parse_test.py  split_fields_test.py
topics/hvtext/test/: discard_blank_test.py  discard_comment_test.py  guess_columns_for_one_row_test.py  kv_parse_test.py  split_fields_test.py  test_strip_comments.py
topics/joplin/: Makefile  db.py  logger.py  note_cat.py  note_ls.py  note_search.py  pyproject.toml  requirements.txt  sandbox.py  stop_watch.py
topics/joplin/src/jopcli/: __init__.py  cli.py  db.py  logger.py  note_ls.py  note_search.py  sandbox.py
topics/key-attribute-index-drill/: Makefile  README.md  pyproject.toml  split-sandbox.ipynb
topics/key-attribute-index-drill/src/kai_drill/: __init__.py
topics/key-attribute-index-drill/test/: common.py  test_kai.py  test_split_path.py  test_to_slice.py
topics/randomlib/: Makefile  README.md  pyproject.toml  randomlib_demo.py
topics/randomlib/randomlib/: nouns.txt  randomlib.py
topics/randomlib/src/randomlib/: __init__.py  __main__.py  adjectives.txt
topics/rate-limiting/: Makefile  main.py  pyproject.toml
topics/rate-limiting/src/rate_limiting/: __init__.py
topics/rest_api/: Makefile  jq.py  pyproject.toml  requirements.txt  rest_api.py  rest_sandbox.py  rest_sandbox2.py  rest_sandbox3.py
topics/sudoku/: Makefile  main.py  puzzle1.msk  puzzle1.ss  pyproject.toml  sudoku.py
topics/sudoku/sandbox/: out.txt
topics/sudoku/src/sudoku/: __init__.py
topics/tea-house/: Makefile  pyproject.toml
topics/tea-house/src/data/: items.csv  names.csv
topics/tea-house/src/tea_house/: __init__.py  data.py  main.py  report.py
topics/tea-house/test/: test_item.py
topics/version/: Makefile  debug_me.py  pyproject.toml  requirements.txt  sample-requirements.txt  source-me.sh
topics/version/src/versionlib/: __init__.py  parse.py  satisfied.py  version.py
topics/version/test/: filter_package_test.py  parse_test.py  satisfied_test.py  test_filter_package.py  test_parse.py  test_parse_requirement.py  test_satisfied.py  test_version.py  test_version_satisfied.py  version_test.py
topics/version/version/: __init__.py  parse.py  satisfied.py  version.py
topics/waitlib/: Makefile  logging.ini  logging_example.py  main.py  pyproject.toml  sample.py  test_waitlib.py  waitlib.py
wip/: retry.py  (+3 more)
(+2217 files in other folders)
