[project]
name = "curses-menu-tryout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "curses-menu>=0.9.0",
]

[project.scripts]
curses-menu-tryout = "curses_menu_tryout.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.3",
]
