[project]
name = "jsonpath-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsonpath-ng>=1.7.0",
    "python-jsonpath>=1.3.0",
]

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "marimo>=0.11.26",
    "ruff>=0.11.2",
]
