[project]
name = "mypy-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
warn_return_any = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.0",
]
