[project]
name = "dtree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
dtree = "dtree:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]
