[project]
name = "amlich"
version = "1.0.0"
description = "Đối Chiếu Âm Lịch Dương Lịch"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
amlich = "amlich.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
