[project]
name = "amlich"
version = "4.0.0"
description = "Đối Chiếu Âm Lịch Dương Lịch"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "prettytable>=3.13.0",
]

[project.scripts]
amlich = "amlich.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
