[project]
name = "battleship-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
battleship-game = "battleship_game:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.11.2",
]
