[project]
name = "hvtext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hvtext = "hvtext:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "pytest>=8.3.4",
    "ruff>=0.9.8",
]
