[project]
name = "jopcli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "rich>=13.9.4",
]

[project.scripts]
jc = "jopcli.cli:main"
jopcli = "jopcli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.2",
]
