[project]
name = "rest-api"
version = "0.1.0"
description = "REST API wrapper"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
rest-api = "rest_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
