[project]
name = "tea-house"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
]

[project.scripts]
tea-house = "tea_house:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "pyrefly>=0.37.0",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]
