[project]
name = "versionlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
versionlib = "versionlib:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "pudb>=2025.1",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
