[project]
name = "waitlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.3",
    "ruff>=0.14.4",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(levelname)-8s | %(name)s:%(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(levelname)-8s | %(name)s:%(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
