[project]
name = "class-param"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click==8.1.7",
]

[project.scripts]
class-param = "class_param:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.4.0",
    "jupyterlab>=4.4.4",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]
