[project]
name = "click-types"
version = "1.0.0"
description = "Demo different click types"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
]

[project.scripts]
ct = "click_types:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
