[project]
name = "config-choice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click==8.1.7",
    "pyyaml>=6.0.2",
]

[project.scripts]
config-choice = "config_choice:main"
c = "config_choice:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "ruff>=0.12.1",
    "ty>=0.0.1a12",
]
