[project]
name = "dataclass-param"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
]

[project.scripts]
dataclass-param = "dataclass_param:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.4.0",
    "jupyterlab>=4.4.4",
    "ruff>=0.12.2",
]
