[project]
name = "dynamic-subcommands"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
]

[project.scripts]
dynamic-subcommands = "dynamic_subcommands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
