[project]
name = "enum-alias"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click==8.1.7",
    "pyyaml>=6.0.2",
]

[project.scripts]
mytool = "enum_alias.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "ruff>=0.12.1",
]
