[project]
name = "enum-choices"
version = "0.1.0"
description = "Click and enum with aliases"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "pyyaml>=6.0.2",
]

[project.scripts]
ec = "enum_choices:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
