[project]
name = "introspection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.3.0",
    "jupyterlab>=4.4.3",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
